# subber

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/: pull_request_template.md
subber/: __init__.py  __main__.py
subber/cli/: __init__.py  main.py
subber/core/: constants.py  matcher.py  types.py
subber/tests/: test_matcher.py
subber/utils/: converter.py  display.py  file_ops.py  logging.py
